--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <title>[title] - Interactive feature - ChicagoMaroon.com</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
-		<link rel="stylesheet" href="../responsiveslides.css">
+		<link rel="stylesheet" href="responsiveslides.css">
 		<link rel="stylesheet" href="demo.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="../responsiveslides.min.js"></script>
+		<script src="responsiveslides.min.js"></script>
 		<script>
 		$(function () {
 
@@ -34,7 +34,7 @@
 		 <ul class="rslides" id="slider1">
        <li><img src="assets/1.jpg" alt=""></li>
        <li><img src="assets/2.png" alt=""></li>
-       <li><img src="assets/3.jpg" alt=""></li>
+       <li><img src="assets/3.png" alt=""></li>
      </ul>
 	 <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
 	 <script type="text/javascript">
