--- a/index.html
+++ b/index.html
@@ -15,42 +15,72 @@
     <title>[title] - Interactive feature - ChicagoMaroon.com</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
-		<link rel="stylesheet" href="responsiveslides.css">
-		<link rel="stylesheet" href="demo.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="responsiveslides.min.js"></script>
-		<script>
-		$(function () {
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet" type='text/css'>
+</head>
 
-			// Slideshow 1
-			$("#slider1").responsiveSlides({
-				maxwidth: 800,
-				speed: 800
-			});
-		</script>
- </head>
- <body>
-	 <div id="wrapper">
-		 <ul class="rslides" id="slider1">
-       <li><img src="assets/1.jpg" alt=""></li>
-       <li><img src="assets/2.png" alt=""></li>
-       <li><img src="assets/3.png" alt=""></li>
-     </ul>
-	 <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
-	 <script type="text/javascript">
-			 /* * * CONFIGURATION VARIABLES * * */
-			 var disqus_shortname = 'chicagomarooninteractive';
+<body>
+    <script>
+				<!-- Enables Facebook SDK, more FB scripts in main.js -->
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '1584750855103746',
+                xfbml: true,
+                version: 'v2.2'
+            });
+        };
 
-			 /* * * DON'T EDIT BELOW THIS LINE * * */
-			 (function () {
-					 var dsq = document.createElement('script');
-					 dsq.type = 'text/javascript';
-					 dsq.async = true;
-					 dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-					 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			 })();
-	 </script>
-	 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
-	 </noscript>
- </body>
- </html>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+		<div class="navbar nav navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+						<!-- Sets the header on left as Chicago Maroon -->
+                <a class="navbar-brand" href="http://www.chicagomaroon.com/">
+                    <img alt="The Chicago Maroon Logo" class='logo' src="http://chicagomaroon.github.io/img/maroon-logo.png">
+                </a>
+            </div>
+						<!-- This does not currently work -->
+            <div class="social-icon-container fb right">
+                <a id="fb-icon" class="social-icon right" target="_blank" href="#">
+                    <img class="logo" src="[link]" />
+                </a>
+            </div>
+            <div class="social-icon-container twitter right">
+                <a id="twitter-icon" class="social-icon right tweet" target="_blank" href="[link]" title="[title]">
+                    <img class="logo" src="http://chicagomaroon.github.io/img/twitter-logo.png" />
+                </a>
+            </div>
+            <div class="social-icon-container comments right">
+                <a id='comments' class="disqus-comment-count social-icon right logo" data-disqus-url="http://example.com/article1.html" href='#comment'>
+                    <i class="fa fa-comment fa-lg logo"></i>
+                </a>
+            </div>
+        </div>
+    	</div>
+			<div class='container'>
+					<div class='row'>
+							<div class='col-xs-12 fullscreen'>
+									<div class='push-down'>
+									</div>
+									<div class='text-background'>
+											<div class='section-art-container'>
+													<span class='section-art'><a href="[section link]" target="new">[section]</span>
+											</div>
+									<h1 class='text'>[title]</h1>
+									<h2 class='subtitle'>[subtitle]</h2>
+									<h3 class='author'>
+										By Grace Hauck | Produced by Forrest Sill | November 30, 2015</h3>
+									</div>
+							</div>
+					</div>
