--- a/index.html
+++ b/index.html
@@ -50,17 +50,23 @@
                     <img alt="The Chicago Maroon Logo" class='logo' src="http://chicagomaroon.github.io/img/maroon-logo.png">
                 </a>
             </div>
+						<!-- You can go to different sections using this tool -->
+						<div class="section middle">
+								<a href="[#section number]">Section 1</a>
+						</div>
 						<!-- This does not currently work -->
             <div class="social-icon-container fb right">
                 <a id="fb-icon" class="social-icon right" target="_blank" href="#">
                     <img class="logo" src="[link]" />
                 </a>
             </div>
+						<!-- Twitter Icon, shares the article -->
             <div class="social-icon-container twitter right">
                 <a id="twitter-icon" class="social-icon right tweet" target="_blank" href="[link]" title="[title]">
                     <img class="logo" src="http://chicagomaroon.github.io/img/twitter-logo.png" />
                 </a>
             </div>
+						<!-- Scrolls to comment section -->
             <div class="social-icon-container comments right">
                 <a id='comments' class="disqus-comment-count social-icon right logo" data-disqus-url="http://example.com/article1.html" href='#comment'>
                     <i class="fa fa-comment fa-lg logo"></i>
@@ -79,8 +85,97 @@
 											</div>
 									<h1 class='text'>[title]</h1>
 									<h2 class='subtitle'>[subtitle]</h2>
-									<h3 class='author'>
-										By Grace Hauck | Produced by Forrest Sill | November 30, 2015</h3>
+									<h3 class='authors'>
+										By <span class="name"><a href="[writer link]" target="new">[author] | Produced by</a></span>
+										<span class="name"><a href="[producer link]" target="new">[producer] | [date]</a></span>
+									</h3>
 									</div>
 							</div>
 					</div>
+					<div class='row'>
+						<section id="[section number]" class="[head tail]"
+            <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+                <p class='text body-text first-paragraph'>
+                    First paragraph.
+                </p>
+                <p class='text body-text'>
+                    Body paragrpah.
+                </p>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+						<section id="[section number]" class="[head tail]"
+                <p class='text body-text following-photo'>
+                    Body Text (add .following-photo to reduce top margin)
+                </p>
+                <hr class='no-margin-bottom'>
+                <div class='quotation text'>“[pull quote]”</div>
+                <hr class='no-margin-bottom'>
+            </div>
+
+            <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+						<section id="[section number]" class="[head tail]"
+                <div class='video-container'>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ze8E6eo-lGI" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES * * */
+                var disqus_shortname = 'chicagomarooninteractive';
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function () {
+                    var dsq = document.createElement('script');
+                    dsq.type = 'text/javascript';
+                    dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
+            </noscript>
+        </div>
+
+    </div>
+    <a id='comment'></a>
+    <footer>
+        <a href="http://www.chicagomaroon.com/">© 2015 The Chicago Maroon</a>
+    </footer>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'chicagomarooninteractive';
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
+</body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- Check that you're actually using fitvids.js. -->
+<script src="jquery.fitvids.js"></script>
+<script src='main.js'></script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+//[DEV] insert GA id UA-59818592-6
+    ga('create', 'UA-59818592-4', 'auto');
+    ga('send', 'pageview');
+</script>
+
+</html>
