--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="[author]"><meta property="og:url" content="http://chicagomaroon.github.io/[slug]/" />
   <meta property="og:title" content="[title]" />
   <meta property="og:description" content="[subhead]" />
+	<!-- Background Image -->
   <meta property="og:image" content="http://chicagomaroon.github.io/[slug]/img/[pick image].jpg" />
 
     <title>[title] - Interactive feature - ChicagoMaroon.com</title>
@@ -17,7 +18,9 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type='text/css'>
+		<link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
+    <link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
+    <link href="style.css" rel="stylesheet" type='text/css'>
 </head>
 
 <body>
@@ -52,7 +55,7 @@
             </div>
 						<!-- You can go to different sections using this tool -->
 						<div class="section middle">
-								<a href="[#section number]">Section 1</a>
+								<a href="#section1">Section 1</a>
 						</div>
 						<!-- This does not currently work -->
             <div class="social-icon-container fb right">
@@ -76,7 +79,7 @@
     	</div>
 			<div class='container'>
 					<div class='row'>
-							<div class='col-xs-12 fullscreen'>
+							<div class='col-xs-11 fullscreen'>
 									<div class='push-down'>
 									</div>
 									<div class='text-background'>
@@ -93,7 +96,7 @@
 							</div>
 					</div>
 					<div class='row'>
-						<section id="[section number]" class="[head tail]"
+						<section id="section1" class="[head tail]"
             <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                 <p class='text body-text first-paragraph'>
                     First paragraph.
@@ -105,7 +108,7 @@
         </div>
         <div class='row'>
             <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-						<section id="[section number]" class="[head tail]"
+						<section id="Section 2" class="[head tail]"
                 <p class='text body-text following-photo'>
                     Body Text (add .following-photo to reduce top margin)
                 </p>
@@ -159,7 +162,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <!-- Check that you're actually using fitvids.js. -->
-<script src="jquery.fitvids.js"></script>
 <script src='main.js'></script>
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -177,5 +179,4 @@
     ga('create', 'UA-59818592-4', 'auto');
     ga('send', 'pageview');
 </script>
-
 </html>
