--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://chicagomaroon.github.io/img/favicon.png">
 	<meta name="description" content="[title]">
-  	<meta name="author" content="[author]"><meta property="og:url" content="http://chicagomaroon.github.io/[slug]/" />
-  	<meta property="og:title" content="[title]" />
-  	<meta property="og:description" content="[subhead]" />
+  <meta name="author" content="[author]"><meta property="og:url" content="http://chicagomaroon.github.io/[slug]/" />
+  <meta property="og:title" content="[title]" />
+  <meta property="og:description" content="[subhead]" />
 	<!-- Background Image -->
-  	<meta property="og:image" content="http://chicagomaroon.github.io/[slug]/img/[pick image].jpg" />
+	<meta property="og:image" content="http://chicagomaroon.github.io/[slug]/img/[pick image].jpg" />
 
-    	<title>[title] - Interactive feature - ChicagoMaroon.com</title>
+  <title>[title] - Interactive feature - ChicagoMaroon.com</title>
 
-    	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
-    	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    	<link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
-    	<link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
-    	<link href="style.css" rel="stylesheet" type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
+  <link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
+  <link href="main.css" rel="stylesheet" type='text/css'>
 </head>
 
 <body>
     <script>
-	<!-- Enables Facebook SDK, more FB scripts in main.js -->
+		<!-- Enables Facebook SDK, more FB scripts in main.js -->
         window.fbAsyncInit = function () {
             FB.init({
                 appId: '1584750855103746',
@@ -44,42 +44,46 @@
             js.src = "//connect.facebook.net/en_US/sdk.js";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-    </script>
-	<div class="navbar nav navbar-default navbar-fixed-top">
+    	</script>
+			<div class="navbar nav navbar-default navbar-fixed-top">
         	<div class="container-fluid">
             		<div class="navbar-header">
-			<!-- Sets the header on left as Chicago Maroon -->
+									<!-- Sets the header on left as Chicago Maroon -->
                 	<a class="navbar-brand" href="http://www.chicagomaroon.com/">
                     <img alt="The Chicago Maroon Logo" class='logo' src="http://chicagomaroon.github.io/img/maroon-logo.png">
-                </a>
-            </div>
-						<!-- You can go to different sections using this tool -->
-						<div class="section middle">
-								<a href="#section1">Section 1</a>
-						</div>
-						<!-- This does not currently work -->
-            <div class="social-icon-container fb right">
-                <a id="fb-icon" class="social-icon right" target="_blank" href="#">
+                	</a>
+            		</div>
+								<!-- Jumps to a section in the article -->
+								<div class="section middle">
+									<a href="#section1">Section 1</a>
+								</div>
+								<!-- Jumps to a section in the article -->
+								<div class="section middle">
+									<a href="#section2">Section 1</a>
+								</div>
+								<!-- Facebook Share Icon  -->
+            		<div class="social-icon-container fb right">
+                	<a id="fb-icon" class="social-icon right" target="_blank" href="#">
                     <img class="logo" src="[link]" />
-                </a>
-            </div>
-						<!-- Twitter Icon, shares the article -->
-            <div class="social-icon-container twitter right">
-                <a id="twitter-icon" class="social-icon right tweet" target="_blank" href="[link]" title="[title]">
+                	</a>
+            		</div>
+								<!-- Twitter Share Icon -->
+            		<div class="social-icon-container twitter right">
+                	<a id="twitter-icon" class="social-icon right tweet" target="_blank" href="[link]" title="[title]">
                     <img class="logo" src="http://chicagomaroon.github.io/img/twitter-logo.png" />
-                </a>
-            </div>
-						<!-- Scrolls to comment section -->
-            <div class="social-icon-container comments right">
-                <a id='comments' class="disqus-comment-count social-icon right logo" data-disqus-url="http://example.com/article1.html" href='#comment'>
+                	</a>
+            		</div>
+								<!-- Jumps to comment section -->
+            		<div class="social-icon-container comments right">
+                	<a id='comments' class="disqus-comment-count social-icon right logo" data-disqus-url="http://example.com/article1.html" href='#comment'>
                     <i class="fa fa-comment fa-lg logo"></i>
-                </a>
-            </div>
-        </div>
+                	</a>
+            		</div>
+        	</div>
     	</div>
 			<div class='container'>
 					<div class='row'>
-							<div class='col-xs-11 fullscreen'>
+							<div class='col-xs-12 fullscreen'>
 									<div class='push-down'>
 									</div>
 									<div class='text-background'>
@@ -89,7 +93,7 @@
 									<h1 class='text'>[title]</h1>
 									<h2 class='subtitle'>[subtitle]</h2>
 									<h3 class='authors'>
-										By <span class="name"><a href="[writer link]" target="new">[author] | Produced by</a></span>
+									  By <span class="name"><a href="[writer link]" target="new">[author] | Produced by</a></span>
 										<span class="name"><a href="[producer link]" target="new">[producer] | [date]</a></span>
 									</h3>
 									</div>
@@ -104,26 +108,22 @@
                 <p class='text body-text'>
                     Body paragrpah.
                 </p>
+						</section>
             </div>
-        </div>
-        <div class='row'>
+        	</div>
+        	<div class='row'>
             <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-						<section id="Section 2" class="[head tail]"
+						<section id="section2" class="[head tail]"
                 <p class='text body-text following-photo'>
                     Body Text (add .following-photo to reduce top margin)
                 </p>
                 <hr class='no-margin-bottom'>
                 <div class='quotation text'>“[pull quote]”</div>
                 <hr class='no-margin-bottom'>
-            </div>
-
-            <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-						<section id="[section number]" class="[head tail]"
-                <div class='video-container'>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ze8E6eo-lGI" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-            <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
+						</section>
+						</div>
+					</div>
+          <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
             <script type="text/javascript">
                 /* * * CONFIGURATION VARIABLES * * */
                 var disqus_shortname = 'chicagomarooninteractive';
@@ -138,9 +138,9 @@
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
             </noscript>
-        </div>
-
-    </div>
+        	</div>
+    	</div>
+		<!-- Commenting Section -->
     <a id='comment'></a>
     <footer>
         <a href="http://www.chicagomaroon.com/">© 2015 The Chicago Maroon</a>
@@ -161,9 +161,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <!-- Check that you're actually using fitvids.js. -->
 <script src='main.js'></script>
 <script>
+		// Enables Google Analytics //
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
