--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <title>[title] - Interactive feature - ChicagoMaroon.com</title>
 
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
   <link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
   <link href="main.css" rel="stylesheet" type='text/css'>
@@ -45,7 +45,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     	</script>
-			<div class="navbar nav navbar-default navbar-fixed-top">
+			<div class="navbar navbar-default navbar-fixed-top">
         	<div class="container-fluid">
             		<div class="navbar-header">
 									<!-- Sets the header on left as Chicago Maroon -->
@@ -53,18 +53,10 @@
                     <img alt="The Chicago Maroon Logo" class='logo' src="http://chicagomaroon.github.io/img/maroon-logo.png">
                 	</a>
             		</div>
-								<!-- Jumps to a section in the article -->
-								<div class="section middle">
-									<a href="#section1">Section 1</a>
-								</div>
-								<!-- Jumps to a section in the article -->
-								<div class="section middle">
-									<a href="#section2">Section 1</a>
-								</div>
 								<!-- Facebook Share Icon  -->
             		<div class="social-icon-container fb right">
                 	<a id="fb-icon" class="social-icon right" target="_blank" href="#">
-                    <img class="logo" src="[link]" />
+                    <img class="logo" src="http://chicagomaroon.github.io/img/fb-logo.png" />
                 	</a>
             		</div>
 								<!-- Twitter Share Icon -->
@@ -82,19 +74,25 @@
         	</div>
     	</div>
 			<div class='container'>
+				  <div class='col-xs-12 sidebar'>
+						  <nav>
+								<ul>
+										<li><a href="#section1">Section 1</a></li>
+										<li><a href="#section2">Section 2</a></li>
+						  	</ul>
+							</nav>
+					</div>
 					<div class='row'>
-							<div class='col-xs-12 fullscreen'>
-									<div class='push-down'>
-									</div>
+							<div class='col-xs-12 fullscreen-picture'>
 									<div class='text-background'>
-											<div class='section-art-container'>
-													<span class='section-art'><a href="[section link]" target="new">[section]</span>
+											<div class='section-container'>
+													<span class='section-link'><a href="[section link]">[section]</span>
 											</div>
-									<h1 class='text'>[title]</h1>
+									<h1 class='title'>[title]</h1>
 									<h2 class='subtitle'>[subtitle]</h2>
 									<h3 class='authors'>
-									  By <span class="name"><a href="[writer link]" target="new">[author] | Produced by</a></span>
-										<span class="name"><a href="[producer link]" target="new">[producer] | [date]</a></span>
+									  By<span class="name"><a href="[writer link]" target="new">[author]</a></span> | Produced by
+										<span class="name"><a href="[producer link]" target="new">[producer]</a></span> | [date]
 									</h3>
 									</div>
 							</div>
@@ -104,6 +102,8 @@
             <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                 <p class='text body-text first-paragraph'>
                     First paragraph.
+						</section>
+						<section id="section2" class="[head tail]"
                 </p>
                 <p class='text body-text'>
                     Body paragrpah.
@@ -160,7 +160,7 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script src='main.js'></script>
 <script>
 		// Enables Google Analytics //
@@ -174,7 +174,7 @@
         a.async = 1;
         a.src = g;
         m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
 //[DEV] insert GA id UA-59818592-6
     ga('create', 'UA-59818592-4', 'auto');
     ga('send', 'pageview');
