Added a photo and worked on links and the side bar

--- a/index.html
+++ b/index.html
@@ -87,153 +87,46 @@
 							<div class='col-xs-12 fullscreen-picture'>
 									<div class='text-background'>
 											<div class='section-container'>
-													<span class='section-link'><a href="[section link]">[section]</span>
+													<span class='section-link'><a href="[section link]"></a>[section]</span>
 											</div>
-									<h1 class='title'>[title]</h1>
-									<h2 class='subtitle'>[subtitle]</h2>
-									<h3 class='authors'>
-									  By<span class="name"><a href="[writer link]" target="new">[author]</a></span> | Produced by
-										<span class="name"><a href="[producer link]" target="new">[producer]</a></span> | [date]
-									</h3>
-									</div>
-							</div>
+											<h1 class='title'>Hello</h1>
+											<h2 class='subtitle'>[subtitle]</h2>
+											<h3 class='authors'>
+									  		<span class="name"><a href="[writer link]" target="new">[author]</a></span> | Produced by
+												<span class="name"><a href="[producer link]" target="new">[producer]</a></span> | [date]
+											</h3>
+								</div>
+						</div>
 					</div>
 					<div class='row'>
-						<section id="section1" class="[head tail]"
+						<section id="section1" class="[head tail]">
             <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                 <p class='text body-text first-paragraph'>
                     First paragraph.
+								</p>
+						</div>
 						</section>
-						<section id="section2" class="[head tail]"
-                </p>
+						<section id="section2" class="[head tail]">
+						<div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                 <p class='text body-text'>
-                    Body paragrpah.
+                    Body paragraph.
                 </p>
+						</div>
 						</section>
-=======
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="http://chicagomaroon.github.io/img/favicon.png">
-    <meta name="description" content="[title]">
-    <meta name="author" content="[author]">
-    <meta property="og:url" content="http://chicagomaroon.github.io/[slug]/" />
-    <meta property="og:title" content="[title]" />
-    <meta property="og:description" content="[subhead]" />
-    <!-- Background Image -->
-    <meta property="og:image" content="http://chicagomaroon.github.io/[slug]/img/[pick image].jpg" />
-    <title>[title] - Interactive feature - ChicagoMaroon.com</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
-    <link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
-    <link href="main.css" rel="stylesheet" type='text/css'>
-  </head>
-  <body>
-    <script>
-      <!-- Enables Facebook SDK, more FB scripts in main.js -->
-            window.fbAsyncInit = function () {
-                FB.init({
-                    appId: '1584750855103746',
-                    xfbml: true,
-                    version: 'v2.2'
-                });
-            };
-      
-            (function (d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) {
-                    return;
-                }
-                js = d.createElement(s);
-                js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-        	
-    </script>
-    <div class="navbar nav navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <!-- Sets the header on left as Chicago Maroon -->
-          <a class="navbar-brand" href="http://www.chicagomaroon.com/">
-          <img alt="The Chicago Maroon Logo" class='logo' src="http://chicagomaroon.github.io/img/maroon-logo.png">
-          </a>
-        </div>
-        <!-- Jumps to a section in the article -->
-        <div class="section middle">
-          <a href="#section1">Section 1</a>
-        </div>
-        <!-- Jumps to a section in the article -->
-        <div class="section middle">
-          <a href="#section2">Section 1</a>
-        </div>
-        <!-- Facebook Share Icon  -->
-        <div class="social-icon-container fb right">
-          <a id="fb-icon" class="social-icon right" target="_blank" href="#">
-          <img class="logo" src="[link]" />
-          </a>
-        </div>
-        <!-- Twitter Share Icon -->
-        <div class="social-icon-container twitter right">
-          <a id="twitter-icon" class="social-icon right tweet" target="_blank" href="[link]" title="[title]">
-          <img class="logo" src="http://chicagomaroon.github.io/img/twitter-logo.png" />
-          </a>
-        </div>
-        <!-- Jumps to comment section -->
-        <div class="social-icon-container comments right">
-          <a id='comments' class="disqus-comment-count social-icon right logo" data-disqus-url="http://example.com/article1.html" href='#comment'>
-          <i class="fa fa-comment fa-lg logo"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class='container'>
-      <div class='row'>
-        <div class='col-xs-12 fullscreen'>
-          <div class='push-down'>
-          </div>
-          <div class='text-background'>
-            <div class='section-art-container'>
-              <span class='section-art'>
-                <a href="[section link]" target="new">
-                  [section]
-              </span>
->>>>>>> 8eafdf779c83cf1915266f788b8fba1eabbbb8d0
-            </div>
-            <h1 class='text'>[title]</h1>
-            <h2 class='subtitle'>[subtitle]</h2>
-            <h3 class='authors'>
-            By <span class="name"><a href="[writer link]" target="new">[author] | Produced by</a></span>
-            <span class="name"><a href="[producer link]" target="new">[producer] | [date]</a></span>
-            </h3>
-          </div>
-        </div>
-      </div>
-      <div class='row'>
-        <section id="section1" class="[head tail]"
-        <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-          <p class='text body-text first-paragraph'>
-            First paragraph.
-          </p>
-          <p class='text body-text'>
-            Body paragrpah.
-          </p>
-          </section>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-          <section id="section2" class="[head tail]"
-          <p class='text body-text following-photo'>
-            Body Text (add .following-photo to reduce top margin)
-          </p>
-          <hr class='no-margin-bottom'>
-          <div class='quotation text'>“[pull quote]”</div>
-          <hr class='no-margin-bottom'>
-          </section>
+						<section id="section3" class="[head tail]">
+        		<div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+          			<p class='text body-text following-photo'>
+            				Body Text (add .following-photo to reduce top margin)
+          			</p>
+						</div>
+						</section>
+          	<hr class='no-margin-bottom'>
+          	<div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+								<p class='quotation-text'>
+										[pull quote]
+							  </p>
+						</div>
+          	<hr class='no-margin-bottom'>
         </div>
       </div>
       <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
@@ -270,9 +163,7 @@
           (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
       }());
     </script>
-<<<<<<< HEAD
 </body>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script src='main.js'></script>
@@ -293,27 +184,4 @@
     ga('create', 'UA-59818592-4', 'auto');
     ga('send', 'pageview');
 </script>
-=======
-  </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <script src='main.js'></script>
-  <script>
-    // Enables Google Analytics //
-      (function (i, s, o, g, r, a, m) {
-          i['GoogleAnalyticsObject'] = r;
-          i[r] = i[r] || function () {
-              (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date();
-          a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-          a.async = 1;
-          a.src = g;
-          m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    //[DEV] insert GA id UA-59818592-6
-      ga('create', 'UA-59818592-4', 'auto');
-      ga('send', 'pageview');
-  </script>
->>>>>>> 8eafdf779c83cf1915266f788b8fba1eabbbb8d0
 </html>
