Made the navbar prettier, added other features as well

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
+
 
 <head>
 	<meta charset="utf-8">
@@ -83,20 +83,23 @@
 						  	</ul>
 							</nav>
 					</div>
-					<div class='row'>
+					<div class='container'>
 							<div class='col-xs-12 fullscreen-picture'>
-									<div class='text-background'>
+								  <div class='push-down'
+									<div class='col-xs-12 text-background'>
+										  <!-- specified height for WINDOW ADD IT -->
 											<div class='section-container'>
-													<span class='section-link'><a href="[section link]"></a>[section]</span>
+													<span class='section-link'><a href="[section link]" target="new">[section]</a></span>
 											</div>
-											<h1 class='title'>Hello</h1>
+											<h1 class='title'>[title]</h1>
 											<h2 class='subtitle'>[subtitle]</h2>
 											<h3 class='authors'>
 									  		<span class="name"><a href="[writer link]" target="new">[author]</a></span> | Produced by
 												<span class="name"><a href="[producer link]" target="new">[producer]</a></span> | [date]
 											</h3>
+									</div>
 								</div>
-						</div>
+								<div class='credit photo-credit cover-photo'>Name/<em>Chicago Maroon</em>
 					</div>
 					<div class='row'>
 						<section id="section1" class="[head tail]">
@@ -120,13 +123,15 @@
           			</p>
 						</div>
 						</section>
-          	<hr class='no-margin-bottom'>
+						<!-- adds a top divider -->
+          	<!-- <hr class='no-margin-bottom'> -->
           	<div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
 								<p class='quotation-text'>
 										[pull quote]
 							  </p>
 						</div>
-          	<hr class='no-margin-bottom'>
+						<!-- adds a bottom divider -->
+          	<!-- <hr class='no-margin-bottom'> -->
         </div>
       </div>
       <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
