--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:600' rel='stylesheet' type='text/css'>
    <link href="http://chicagomaroon.github.io/styles/reset.css" rel="stylesheet" type='text/css'>
    <link href="http://chicagomaroon.github.io/styles/base.css" rel="stylesheet" type='text/css'>
    <link href="main.css" rel="stylesheet" type='text/css'>
@@ -79,12 +80,13 @@
       <div class='col-xs-12 sidebar'>
          <nav>
             <ul>
-               <li><a href="#section1">Section 1</a>
+               <li><a href="#section1">First Section</a>
                </li>
-               <li><a href="#section2">Section 2</a>
+               <li><a href="#section2">Picture</a>
                </li>
-               <li><a href="section3">Section 3</a>
+               <li><a href="#section3">Second Section</a>
                </li>
+               <li><a href="#section4">Last Words</a>
             </ul>
          </nav>
       </div>
@@ -99,7 +101,7 @@
                      </div>
                      <h1 class='title'>[title]</h1>
                      <h2 class='subtitle'>[subtitle]</h2>
-                     <h3 class='authors'>
+                     <h3 class='authors'>Written by
 									  		<span class="name"><a href="[writer link]" target="new">[author]</a></span> | Produced by
 												<span class="name"><a href="[producer link]" target="new">[producer]</a></span> | [date]
 											</h3>
@@ -110,7 +112,7 @@
          <div class='credit photo-credit cover-photo'>Name/<em>Chicago Maroon</em>
          </div>
          <div class='row'>
-            <section id="section1" class="[head tail]">
+            <section id="section1" class="head tail">
                <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                   <p class='text body-text first-paragraph'>
                      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
@@ -119,8 +121,6 @@
                      Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
                   </p>
                </div>
-            </section>
-            <section id="section2" class="[head tail]">
                <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                   <p class='text body-text'>
                      Here are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
@@ -131,14 +131,14 @@
                   </p>
                </div>
             </section>
-            <section id ="picture" class="[head tail]">
+            <section id ="section2" class="head tail">
               <div class='col-xs-12 body-image-div'>
                   <img class='body-image' alt='Stillframe of movie' src="http://math.bu.edu/DYSYS/chaos-game/sierp-det.GIF">
                   <div class="credit photo-credit cover-photo body-photo-credit">Grace Hauck/<em>Chicago Maroon</em>
                   </div>
               </div>
             </section>
-            <section id="section3" class="[head tail]">
+            <section id="section3" class="head tail">
                  <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
                     <p class='text body-text following-photo'>
                       Here are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
@@ -148,16 +148,26 @@
                        The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
                     </p>
                  </div>
-              </section>
-            <!-- adds a top divider -->
-            <!-- <hr class='no-margin-bottom'> -->
-            <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
-               <p class='quotation-text'>
+            </section>
+         <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+           <hr class='no-margin-bottom'>
+           <p class='quotation-text'>
                   "Forrest Sill is so hot, is he single?"
-               </p>
-            </div>
-            <!-- <hr class='no-margin-bottom'> -->
+           </p>
+           <hr class='no-margin-bottom'>
          </div>
+         <section id="section4" class="head tail">
+           <div class='col-lg-offset-3 col-lg-5 col-md-offset-2 col-md-6 col-sm-offset-3 col-sm-7 col-xs-12'>
+              <p class='text body-text following-photo'>
+                Here are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
+                or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+                 All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
+                 It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.
+                 The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+              </p>
+           </div>
+         </section>
+       </div>
       </div>
    </div>
    <div id="disqus_thread" class='col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-7 col-sm-offset-2 col-sm-9 col-xs-12'></div>
